infocenter/src/App.css
/* ... */
.modal-title-bar {
  font-size: 16px;
  width: 100%;
  grid-row: 1;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--med-light-theme);
  color: white;
}

.model-title {
  transform: translateX(10px);
}

.cross {
  float: right;
  margin-right: 20px;
}

.cross:hover {
  cursor: pointer;
}

#title-aligner {
  width: 20px;
  height: 20px;
}

.modal-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  background-color: var(--form-background-color);
  min-height: 400px;
}

.contact-modal-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--form-background-color);
}

.contact-update-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--form-background-color);
}

.contact-update-department-container {
  width: 100%;
  height: 60px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin-top: 20px;
  margin-bottom: 20px;
  color: white;
  font-size: 18px;
  font-weight: bold;
}

.contact-update-input-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}



.add-new-heading {
  color: var(--form-font-color);
}

.password-display {
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: var(--form-background-color);
  min-height: 400px;
  overflow-y: auto;
}

.password-container {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  min-height: 100px;
  width: 300px;
  border-radius: 10px;
  margin-bottom: 20px;
}

.password-container:first-of-type {
  margin-top: 20px;
}

.password-type {
  font-weight: 600; 
}

.password-info {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 13px;
}

.bolder {
  font-weight: 500;
}

/* Format the add new staff/equipment modal */
.add-new, .new-image, .update-device-file {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 13px;
  color: var(--form-font-color);
  margin-top: 15px;
}

.update-device-file {
  margin-top: 0px;
}

.update-device-file-label {
  font-size: 15px;
  color: var(--form-font-color);
  font-weight: 500;
  margin-bottom: 14px;
}

.add-new-input, .new-image-input, .update-device-file-input {
  font-size: 12px;
  color: var(--form-font-color);
  height: 20px;
  width: 180px;
  text-align: center;
  padding-right: 20px;
  padding-left: 10px;
  margin-top: 3px;
  transform: translateY(-4px);
  background-color: var(--form-input-color);
}

.update-device-file-input {
  padding: 5px 20px 5px 5px;
}

/* Formatting for the form labels and inputs. */
.add-new-input, .new-image-input {
  border: 1px solid var(--form-input-color);
  padding: 3px;
  width: 210px;
}

.add-new-label, .new-image-label {
  font-weight: 500;
  transform: translateY(-4px);  
}

.edit-add-new-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.tooltip-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100px;
}

.tooltip-button > button {
  border: none;
  border-radius: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 30px;
  width: 30px;
}

.tooltip-button > button > img {
  height: 20px;
  width: 20px;
}

.add-new-aligner {
  height: 30px;
  width: 100px;
}

.tooltip {
  font-size: 10px;
  background-color: #f5f1af;
  color: black;
  padding: 3px 6px 3px 6px;
  border-radius: 3px;
}

.add-new-input-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.staff-contacts-input-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.add-new-contact-input-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.add-new-staff-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 0px 13px;
  transform: translateY(0px);
}

.add-new-staff-upload-button {
  margin-top: 30px;
  margin-bottom: 20px;
}

.software-summary {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 25px;
  margin-bottom: 20px;
}

.software-summary:first-of-type {
  margin-top: 75px;
}

.software-summary:nth-of-type(2) {
  margin-bottom: 60px;
}

.software-device-label {
  margin-bottom: 8px;
  color: var(--form-font-color);
}

.software-device-location {
  font-size: 12px;
  border: 1px solid var(--form-input-color);
  background-color: var(--form-input-color);
  color: var(--form-font-color);
  width: 450px;
  height: 25px;
  padding-left: 20px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.clipboard-copy-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.clipboard-aligner {
  height: 20px;
  width: 20px;
}

.copy-image {
  position: relative;
  left: calc(225px);
  top: -23px;
  height: 20px;
  width: 20px;
}

.copied-text {
  position: relative;
  left: calc(223px);
  top: -22px;
  font-size: 9px;
  color: var(--form-font-color);
}

.hidden {
  display: none;
}

.documents-heading {
  font-size: 20px;
  color: var(--form-font-color);
  margin-bottom: 30px;
}

.document-container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  width: 375px;
  height: 60px;
  margin-bottom: 20px;
  border: 1px solid black;
  background-color: var(--form-input-color);
  text-decoration: none;
  color: var(--form-font-color);
}

.document-icon {
  height: 50px;
  width: 50px;
  margin-right: 20px;
  margin-left: 20px;
}

.document-label {
  margin-right: 10px;
}
/* ... */

